--- a/04/config.env
+++ b/04/config.env
@@ -1,4 +1,4 @@
 NODE_ENV = development
 PORT = 3000
-USERNAME = salmaan
-PASSWORD = 123456
+DATABASE = mongodb+srv://Salmaan:<PASSWORD>@cluster0.jvzsm.mongodb.net/natours?retryWrites=true&w=majority
+DATABASE_PASSWORD = 123454678
