finished authentication and authorization

--- a/04/config.env
+++ b/04/config.env
@@ -2,3 +2,13 @@ NODE_ENV = development
 PORT = 3000
 DATABASE = mongodb+srv://Salmaan:<PASSWORD>@cluster0.jvzsm.mongodb.net/natours?retryWrites=true&w=majority
 DATABASE_PASSWORD = 123454678
+
+JWT_SECRETKEY = this-is-my-secret-key-not-same-as-course
+JWT_EXPIRES_IN = 90d
+JWT_COOKIE_EXPIRES_IN = 90
+
+EMAIL_HOST = smtp.mailtrap.io
+EMAIL_PORT = 25
+EMAIL_USERNAME = d54cf04848f2a1
+EMAIL_PASSWORD = 65afcc3f65f964
+
